# tailwind-yew-boilerplate

./: .gitignore  index.html  package.json  postcss.config.js  rsw.toml  tailwind.config.js  tsconfig.json  vite.config.js
cab/: Cargo.toml
cab/src/: lib.rs
src-web/: main.ts  sw.ts
