# The empty [workspace] table can be used with a [package] to conveniently create a workspace with
# the package and all of its path dependencies.
[workspace]

[package]
name = "cab"
version = "0.0.1"
authors = ["Shihpin Tseng <deftsp@gmail.com>"]
edition = "2021"
description = """
Demo
"""
license = "MIT/Apache-2.0"
repository = "https://github.com/deftsp/tailwind-yew-boilerplate"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = "s"

[profile.dev]
split-debuginfo = "unpacked"

[features]
default = ["console_error_panic_hook"] # "wee_alloc" cost high cpu

[dependencies]
log = "0.4.16"
yew = "0.19.3"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
wasm-logger = "0.2.0"
console_log = { version = "0.2.0", optional = true }
once_cell = "1.10.0"
cfg-if = "1.0.0"
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

